# Python-for-Data-Science

day00/ex00/: Hello.py
day00/ex02/: .find_ft_type.py.swp
day00/ex03/: .NULL_not_found.py.swp  NULL_not_found.py
day00/ex04/: whatis.py
day00/ex05/: building.py
day00/ex06/: .filterstring.py.swp  ft_filter.py
day00bis/ex01/: format_ft_time.py
day00bis/ex02/: find_ft_type.py
day00bis/ex03/: NULL_not_found.py
day00bis/ex04/: whatis.py
day00bis/ex05/: building.py
day00bis/ex06/: filterstring.py
day00bis/ex07/: sos.py
day00bis/ex08/: Loading.py
day00bis/ex09/: README.md  pyproject.toml
day00bis/ex09/ft_package/: ft_package.py
day00bis/ex09/tools/: build.sh
day01/ex00/: give_bmi.py
day01/ex01/: array2D.py
day01/ex02/: load_image.py  numpy_tests.py
day01/ex03/: .example.txt.swp  load_image.py  testplt.py  zoom.py
day01/ex04/: rotate.py
day01/ex05/: pimp_image.py
