[build-system]
requires = ["hatchling >=1.26"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

authors = [{name = "eagle"}]
maintainers = [{name = "eagle", email = "eagle@42.fr"}]

urls = { Homepage = "https://github.com/eagle/ft_package" }
